[Refactoring] 파일 이름 정리, api uri 수정
